refactor: 응답 Wrapper

--- a/build.gradle
+++ b/build.gradle
@@ -47,8 +47,8 @@ publishing {
 			name = "GitHubPackages"
 			url = uri("https://maven.pkg.github.com/QueueTicket/common")
 			credentials {
-				username = System.getenv("USERNAME")
-				password = System.getenv("TOKEN")
+				username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+				password = project.findProperty("gpr.token") ?: System.getenv("TOKEN")
 			}
 		}
 	}
