--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 group = 'com.qticket'
-version = '0.0.3-SNAPSHOT'
+version = '0.0.4'
 
 java {
 	toolchain {
@@ -27,6 +27,8 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.3.4'
 	implementation 'org.springframework.boot:spring-boot-starter-web:3.3.4'
+
+	implementation 'com.h2database:h2:2.2.220'
 
 	compileOnly 'org.projectlombok:lombok:1.18.34'
 	annotationProcessor 'org.projectlombok:lombok:1.18.34'
