hotfix: 공통 모듈에만 설정 파일 적용

--- a/src/main/resources/application-common.properties
+++ b/src/main/resources/application-common.properties
@@ -1,4 +1,5 @@
 spring.application.name=common
+spring.profiles.active=common
 spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
 spring.datasource.username=sa
 spring.datasource.password=
